<?xml version="1.0"?>
<package>
  <name>ui_control</name>
  <version>0.1.0</version>
  <description>

     server_0

  </description>
  <maintainer email="uav@gmail.com">uav</maintainer>
  <author>uav</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cloud_common</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>cloud_common</run_depend>
 
</package>
